[package]
name = "external"
version = "0.1.0"
edition = "2018"

[features]
nightly = []

[dependencies]
ntapi = "0.3"

[dependencies.dataview]
version = "0.1"
default-features = false

[dependencies.intptr]
version = "0.1.3"
features = ["dataview"]

[dependencies.winapi]
version = "0.3.6"
features = [
	"consoleapi",
	"errhandlingapi",
	"handleapi",
	"libloaderapi",
	"memoryapi",
	"processthreadsapi",
	"profileapi",
	"psapi",
	"synchapi",
	"tlhelp32",
	"winbase",
	"wingdi",
	"winerror",
	"winuser",
]

[dependencies.serde]
version = "1.0"
optional = true
